@@ -10,6 +10,7 @@ use Data::Dumper;
 
 use_ok('CBOR::Free');
 
+# Example taken from http://cbor.schmorp.de/indirection
 my $canonical = pack( 'C*', 0x82, 0x80, 0xd9, 0x56, 0x52, 0x66, ) . 'string';
 
 my $decoded = CBOR::Free::decode($canonical);
@@ -22,7 +23,7 @@ is_deeply(
 
 my $all_types_ar = [ \undef, \0, \1, \'haha', \[], \{}, \do { \[] } ];
 
-my $round_tripped = CBOR::Free::decode( CBOR::Free::encode($all_types_ar) );
+my $round_tripped = CBOR::Free::decode( CBOR::Free::encode($all_types_ar, scalar_references => 1) );
 
 is_deeply(
     $round_tripped,
